# server/routes/index.ts
@@ -1,5 +1,6 @@
 import { Router } from 'express';
 import authRoutes from "./auth.routes";
+import userRoutes from "./user.routes";
 
 const router = Router();
 
@@ -8,6 +9,7 @@ router.get('/health', (req, res) => {
 });
 
 router.use("/auth", authRoutes);
+router.use("/user", userRoutes);
 
 export default router;
 
